update ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,4 @@ app.*.map.json
 # Android Studio will place build artifacts here
 /android/app/debug
 /android/app/profile
-/android/app/release
-
-/lib/firebase_options.dart
+/android/app/release"lib\firebase_options.dart"   
