--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,5 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-"lib\firebase_options.dart"   
+#ignore firebase_options
+firebase_options.dart
