--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
 
   flutterfire_cli: ^ 0.2.7
 
+  firebase_auth: ^4.15.3
+
+  firebase_storage: ^11.5.6
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
